--- a/.github/workflows/deploy-edge-functions.yml
+++ b/.github/workflows/deploy-edge-functions.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'supabase/functions/**'
-  workflow_dispatch: # Manual trigger
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -21,16 +21,16 @@ jobs:
         with:
           version: latest
 
-      - name: Deploy Edge Functions
+      - name: Deploy ALL Edge Functions
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_PROJECT_ID: chtsmcvncfabdogrffns
         run: |
-          supabase functions deploy chat-assistant --project-ref $SUPABASE_PROJECT_ID
-          echo "✅ Edge Function deployed successfully!"
-
-      - name: Verify Deployment
-        run: |
-          echo "🎉 Deployment completed!"
-          echo "Function: chat-assistant"
-          echo "Project: chtsmcvncfabdogrffns"
+          for fn in supabase/functions/*; do
+            if [ -d "$fn" ]; then
+              name=$(basename "$fn")
+              echo "🚀 Deploying function: $name"
+              supabase functions deploy "$name" --project-ref $SUPABASE_PROJECT_ID
+            fi
+          done
+          echo "✅ All functions deployed!"
