Skip underscore edge function folders in deployment

--- a/.github/workflows/deploy-edge-functions.yml
+++ b/.github/workflows/deploy-edge-functions.yml
@@ -29,6 +29,10 @@ jobs:
           for fn in supabase/functions/*; do
             if [ -d "$fn" ]; then
               name=$(basename "$fn")
+              if [[ "$name" == _* ]]; then
+                echo "⏩ Skipping private/shared directory: $name"
+                continue
+              fi
               echo "🚀 Deploying function: $name"
               supabase functions deploy "$name" --project-ref $SUPABASE_PROJECT_ID
             fi
