Refactor deploy-all-functions workflow for clarity

--- a/.github/workflows/deploy-all-functions.yml
+++ b/.github/workflows/deploy-all-functions.yml
@@ -1,25 +1,23 @@
-name: Deploy All Edge Functions
+- name: Deploy ALL Edge Functions
+  env:
+    SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+    SUPABASE_PROJECT_ID: chtsmcvncfabdogrffns
+  run: |
+    cd $GITHUB_WORKSPACE/supabase/functions
 
-on:
-  workflow_dispatch: # فقط manual trigger
+    for fn in */ ; do
+      name=$(basename "$fn")
 
-jobs:
-  deploy-all:
-    runs-on: ubuntu-latest
+      # Skip helper folders
+      if [[ "$name" == _* ]]; then
+        echo "⏩ Skipping private/shared directory: $name"
+        continue
+      fi
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      echo "🚀 Deploying function: $name"
+      supabase functions deploy "$name" \
+        --project-ref $SUPABASE_PROJECT_ID \
+        --no-verify-jwt
+    done
 
-      - name: Setup Supabase CLI
-        uses: supabase/setup-cli@v1
-        with:
-          version: latest
-
-      - name: Deploy All Edge Functions
-        env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-          SUPABASE_PROJECT_ID: chtsmcvncfabdogrffns
-        run: |
-          supabase functions deploy --project-ref $SUPABASE_PROJECT_ID
-          echo "✅ All Edge Functions deployed successfully!"
+    echo "✅ All functions deployed!"
